--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/src/manifest.json" />
     <title>Solid App</title>
   </head>
   <body>
